<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity" >
    <item android:id="@+id/action_startStop"
          android:icon="@drawable/ic_action_play"
          android:title="@string/action_start"
          android:orderInCategory="1"
          android:showAsAction="always" />
    <item android:id="@+id/action_autoscale"
          android:icon="@drawable/ic_action_full_screen"
          android:title="@string/action_autoscale"
          android:orderInCategory="2"
          android:showAsAction="always" />
    <item android:id="@+id/action_setDemodulation"
          android:icon="@drawable/ic_action_demod_off"
          android:title="@string/action_demodulation_off"
          android:orderInCategory="3"
          android:showAsAction="always" />
    <item android:id="@+id/action_setFrequency"
          android:icon="@drawable/ic_action_frequency"
          android:title="@string/action_setFrequency"
          android:orderInCategory="4"
          android:showAsAction="always" />
    <item android:id="@+id/action_setGain"
          android:icon="@drawable/ic_action_gain"
          android:title="@string/action_setGain"
          android:orderInCategory="10"
          android:showAsAction="always" />
    <item android:id="@+id/action_record"
          android:icon="@drawable/ic_action_record_off"
          android:title="@string/action_recordOff"
          android:orderInCategory="15"
          android:showAsAction="always" />
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/action_help"
          android:title="@string/action_help"
          android:orderInCategory="101"
          android:showAsAction="never" />
</menu>
